--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         PUBLIC PRESALE WILL BE LIVE SOON AND WILL BE ANNOUNCED IN OUR
                         DISCORD. JOIN VORLD AND GET A CHANCE TO SECURE YOUR SPOT
                     </h1>
-                    <a href="https://discord.gg/H7RekzdC">JOIN DISCORD</a>
+                    <a target="_blank" href="https://discord.gg/H7RekzdC">JOIN DISCORD</a>
                 </div>
             </div>
         </div>
@@ -60,17 +60,17 @@
                         of a boundless ocean planet unfold before you
                     </p>
                     <div class="TopSocialCon">
-                        <a id="popOpen" class="presaleBtn">PRE SALE</a>
+                        <a target="_blank" id="popOpen" class="presaleBtn">PRE SALE</a>
                         <div class="topImgCon" id="">
-                            <a href="https://twitter.com/TheVorld_">
+                            <a target="_blank" href="https://twitter.com/TheVorld_">
                                 <img class="TopImg colorInvert" src="/Aquatica/x.png" alt="X" />
                             </a>
-                            <a href="https://discord.gg/H7RekzdC">
+                            <a target="_blank" href="https://discord.gg/H7RekzdC">
                                 <img class="TopImg colorInvert" src="/Aquatica/discord.png" alt="Discord" />
                             </a>
-                            <a href="https://t.me/thevorld">
-                                <img class="TopImg telegram" src="/Aquatica/tele_white.svg" alt="TeleGram" />
-                            </a>
+                            <!-- <a target="_blank" href="https://t.me/thevorld"> -->
+                            <!--     <img class="TopImg telegram" src="/Aquatica/tele_white.svg" alt="TeleGram" /> -->
+                            <!-- </a> -->
                         </div>
                     </div>
                 </div>
@@ -359,8 +359,8 @@
             <div class="loreText">
                 <h1>THE LORE</h1>
                 <p>Understand the depth of aquatica with our stunning comic series</p>
-                <a id="dreader"> COMMING SOON ON DREADER </a>
-                <!-- <a id="dreader" href="www.dreader.com"> COMMING SOON ON DREADER </a> -->
+                <a target="_blank" id="dreader"> COMMING SOON ON DREADER </a>
+                <!-- <a target="_blank" id="dreader" href="www.dreader.com"> COMMING SOON ON DREADER </a> -->
             </div>
 
             <div class="herofooter">
@@ -436,13 +436,13 @@
                     <button type="submit">SUBSCRIBE</button>
                 </form>
                 <div class="links">
-                    <a href="https://twitter.com/TheVorld">
+                    <a target="_blank" href="https://twitter.com/TheVorld">
                         <img src="/Aquatica/x.png" alt="X" />
                     </a>
-                    <a href="https://t.me/thevorld">
-                        <img class="telegram" src="/Aquatica/telegram.svg" alt="TeleGram" />
-                    </a>
-                    <a href="https://discord.gg/H7RekzdC">
+                    <!-- <a target="_blank" href="https://t.me/thevorld"> -->
+                    <!--     <img class="telegram" src="/Aquatica/telegram.svg" alt="TeleGram" /> -->
+                    <!-- </a> -->
+                    <a target="_blank" href="https://discord.gg/H7RekzdC">
                         <img src="/Aquatica/discord.png" alt="Discord" />
                     </a>
                 </div>
