--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="modelText">
                     <h1>echopod</h1>
                     <p>
-                        A communication device that coordinates with the Bots crafted by
+                        A comunication device that coordinates with the Bots crafted by
                         the Astrokidz.
                     </p>
                 </div>
@@ -358,8 +358,15 @@
             </div>
             <div class="loreText">
                 <h1>THE LORE</h1>
-                <p>Understand the depth of aquatica with our stunning comic series</p>
-                <a target="_blank" id="dreader"> COMMING SOON ON DREADER </a>
+                <p>
+                    Enter the captivating world of Aquatica Odyssey with our stunning
+                    comic series.
+                </p>
+                <a target="_blank" id="dreader">
+                    COMING SOON ON &nbsp;
+                    <!-- DREADER  -->
+                    <img src="/Aquatica/dreader.png" class="colorInvert dreaderLogo" alt="" />
+                </a>
                 <!-- <a target="_blank" id="dreader" href="www.dreader.com"> COMMING SOON ON DREADER </a> -->
             </div>
 
