--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 <body>
     <div id="loader">
+        
+        <div class="onMobile loaderText">
+            <p>For better experience use Desktop or Tablet</p>
+        </div>
+
         <div class="loaderImg">
             <img src="/Aquatica/favicon.ico" alt="" />
         </div>
