twitter link update

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="TopSocialCon">
                         <a target="_blank" id="popOpen" class="presaleBtn">PRE SALE</a>
                         <div class="topImgCon" id="">
-                            <a target="_blank" href="https://twitter.com/TheVorld_">
+                            <a target="_blank" href="https://twitter.com/thevorld_">
                                 <img class="TopImg colorInvert" src="/Aquatica/x.png" alt="X" />
                             </a>
                             <a target="_blank" href="https://discord.gg/H7RekzdC">
@@ -448,7 +448,7 @@
                     <button type="submit">SUBSCRIBE</button>
                 </form>
                 <div class="links">
-                    <a target="_blank" href="https://twitter.com/TheVorld">
+                    <a target="_blank" href="https://twitter.com/thevorld_">
                         <img src="/Aquatica/x.png" alt="X" />
                     </a>
                     <!-- <a target="_blank" href="https://t.me/thevorld"> -->
