updeted discord link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         PUBLIC PRESALE WILL BE LIVE SOON AND WILL BE ANNOUNCED IN OUR
                         DISCORD. JOIN VORLD AND GET A CHANCE TO SECURE YOUR SPOT
                     </h1>
-                    <a target="_blank" href="https://discord.gg/H7RekzdC">JOIN DISCORD</a>
+                    <a target="_blank" href="https://discord.com/invite/4933EbdsRf">JOIN DISCORD</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
                             <a target="_blank" href="https://twitter.com/thevorld_">
                                 <img class="TopImg colorInvert" src="/Aquatica/x.png" alt="X" />
                             </a>
-                            <a target="_blank" href="https://discord.gg/H7RekzdC">
+                            <a target="_blank" href="https://discord.com/invite/4933EbdsRf">
                                 <img class="TopImg colorInvert" src="/Aquatica/discord.png" alt="Discord" />
                             </a>
                             <!-- <a target="_blank" href="https://t.me/thevorld"> -->
@@ -454,7 +454,7 @@
                     <!-- <a target="_blank" href="https://t.me/thevorld"> -->
                     <!--     <img class="telegram" src="/Aquatica/telegram.svg" alt="TeleGram" /> -->
                     <!-- </a> -->
-                    <a target="_blank" href="https://discord.gg/H7RekzdC">
+                    <a target="_blank" href="https://discord.com/invite/4933EbdsRf">
                         <img src="/Aquatica/discord.png" alt="Discord" />
                     </a>
                 </div>
