--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
     <div id="loader">
-        
         <div class="onMobile loaderText">
             <p>For better experience use Desktop or Tablet</p>
         </div>
@@ -57,6 +56,10 @@
             <div class="heroContent">
                 <div class="heroNav">
                     <img src="/Aquatica/vorld.png" alt="vorld" />
+                    <a title="AsstroPaper" class="link " target="_blank"
+                        href="/Aquatica/blueprint.pdf">Download Link
+                        <img src="/Aquatica/newtab.svg" />
+                    </a>
                 </div>
                 <div class="heroTitle">
                     <h1>Welcome to aquatica</h1>
